<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_title">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/settings_switch_key"
        android:title="@string/settings_switch_label"/>

    <com.example.android.andoidxonlywidget.TextAutoCompletePreference
        android:defaultValue="@string/settings_city_default"
        android:key="@string/settings_city_key"
        android:title="@string/settings_city_label"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:maxLines="1"/>

    <com.example.android.andoidxonlywidget.NumberPickerPreference
        android:defaultValue="5"
        android:key="@string/settings_forecast_days_key"
        android:title="@string/settings_forecast_days_label" />

</PreferenceScreen>